character select screen bugs fixed and improved, parallax bug fixed, jump, run, takehit, defend, death and 4 attack animations added for knight, simple ai for demonstrating animations, added extra map decorations, migrated to new react app with recent version

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.bottom-left {
+  left: 0;
+  bottom: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.right {
+  right: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.bottom {
+  bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.panel {
+  scrollbar-color: black white;
+}
+
+.bottom-right {
+  right: 0;
+  bottom: 0;
+}
+
+.top-left {
+  left: 0;
+  top: 0;
+  padding: inherit;
+  font-size: 1.5em;
+}
+
+.top-middle {
+  left: "auto";
+  right: "auto";
+  top: 0;
+  font-size: 1em;
+  margin-top: 50px;
+}
+
+.top-right {
+  right: 0;
+  top: 0;
+  font-size: 1.5em;
 }
